--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "linux"]
 	path = linux
 	url = https://github.com/torvalds/linux
+[submodule "busybox"]
+	path = busybox
+	url = https://git.busybox.net/busybox
